<resources>
    <string name="app_name">SuitmediaAssesment</string>
    <string name="profil">profil</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="third_screen">Third Screen</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="choose_a_user">Choose a user</string>
</resources>