<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".SecondActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/second_screen"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/welcome"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/selectedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:text="@string/selected_user_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnChooseUser"
        style="@style/ButtonUtills"
        android:layout_marginTop="305dp"
        android:hint="@string/choose_a_user"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />


</LinearLayout>