<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingTop="100dp"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/profil"
        android:src="@drawable/ic_photo" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:startIconDrawable="@drawable/baseline_person_24">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    style="@style/EtBase"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/palindrome"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:startIconDrawable="@drawable/baseline_palindrome">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPalindrome"
                    style="@style/EtBase"
                    android:ems="10"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnCheck"
                style="@style/ButtonUtills"
                android:layout_marginTop="15dp"
                android:hint="@string/check"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btnNext"
                style="@style/ButtonUtills"
                android:layout_marginTop="15dp"
                android:hint="@string/next"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>